src/test/deca/context/valid/ext/TAB_field_access.deca
class A {
    float[][] tab4 = new float[3][8];

    float[][] method2(){
        return tab4;
    }
}

class B extends A{
    float[][] method2(){
        return tab4;
    }
}

{
    A a = new A();
    float[][] f = a.method2();
    float[] ff = a.method2()[0];
    float fff = a.method2()[0][567];
    a.tab4[0];
    int ii = a.tab4[5][6];
    int i = (new int [5])[5];

    float[] ffff = (new B()).method2()[8];
}