src/test/deca/context/invalid/ext/TAB_field3.deca
class A{
    protected float[][] f;
}

class B{
}

{
    B b = new B();
    b.f;
}